// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootInteraction Tests should highlight header cell 1`] = `
Object {
  "cells": Array [
    Object {
      "colIndex": 0,
      "id": "0-0",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
  ],
  "nodes": Array [
    Object {
      "colIndex": 0,
      "id": "0-0",
      "rowIndex": 1,
      "x": 1,
    },
  ],
  "stateName": "hover",
}
`;

exports[`RootInteraction Tests should register default interaction 1`] = `Object {}`;

exports[`RootInteraction Tests should selected header cell 1`] = `
Object {
  "cells": Array [
    Object {
      "colIndex": 0,
      "id": "0-0",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
  ],
  "nodes": Array [
    Object {
      "colIndex": 0,
      "id": "0-0",
      "rowIndex": 1,
      "x": 1,
    },
  ],
  "stateName": "selected",
}
`;

exports[`RootInteraction Tests should set all selected interaction state correct 1`] = `
Object {
  "cells": Array [
    Object {
      "colIndex": 0,
      "id": "0-0",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 1,
      "id": "0-1",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 2,
      "id": "0-2",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 3,
      "id": "0-3",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 4,
      "id": "0-4",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 5,
      "id": "0-5",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 6,
      "id": "0-6",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 7,
      "id": "0-7",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 8,
      "id": "0-8",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
    Object {
      "colIndex": 9,
      "id": "0-9",
      "rowIndex": 1,
      "rowQuery": undefined,
      "type": "dataCell",
    },
  ],
  "stateName": "allSelected",
}
`;
